# workflow-orchestration-queue-yankee89-b

./: .ai-repository-summary.md  .env.example  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml  run_opencode_prompt.sh  workflow-orchestration-queue-yankee89-b.code-workspace
.devcontainer/: devcontainer.json
.github/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: orchestrator-agent.yml
.github/workflows/prompts/: orchestrator-agent-prompt.md
.opencode/agents/: orchestrator.md
docker/: Dockerfile  docker-compose.yml
docs/: README.md  workflow-issues.md
docs/api/: README.md
docs/architecture/: 001-github-issues-as-queue.md  README.md
local_ai_instruction_modules/: ai-development-instructions.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
scripts/: start-opencode-server.sh  validate.ps1
src/os_apow/: __init__.py  config.py  main.py
src/os_apow/models/: __init__.py  work_item.py
src/os_apow/notifier/: __init__.py  service.py
src/os_apow/queue/: __init__.py  github_queue.py
src/os_apow/sentinel/: __init__.py  orchestrator.py
src/os_apow/worker/: __init__.py
test/: test-opencode-run.sh
tests/: conftest.py  test_placeholder.py
